[package]
name = "unicode_string_macros"
version = "0.1.0"
edition = "2021"
authors = [
    "Tomasz Mikus <mikus.tomasz@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.18"
syn = "2.0.48"
